src/objects/Additional_Funds_Secured__c.object
<CustomObject>
    <fields>
        <fullName>Amount_secured__c</fullName>
        <label>Amount secured</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_on_account__c</fullName>
        <formula>Opportunity__r.Account_with_IBB__r.Available_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance on account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_deposit__c</fullName>
        <label>Date of deposit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_money__c</fullName>
        <label>Existing money</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_money__c</fullName>
        <label>New money</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Additional Funds Secured</relationshipLabel>
        <relationshipName>Additional_Funds_Secured</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Funds Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Additional_Funds_Secured</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_branch__c</fullName>
        <formula>text(Owner__r.Branch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Funds Seller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Additional_Funds_Secured1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting funds</fullName>
                </value>
                <value>
                    <fullName>Closed won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Additional Funds Secured</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Existing_money__c</columns>
        <columns>New_money__c</columns>
        <columns>Balance_on_account__c</columns>
        <columns>Date_of_deposit__c</columns>
        <columns>Owner_branch__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Funds-{0000}</displayFormat>
        <label>Additional Funds Secured Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Funds Secured</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>